# cdrip.rs

./: .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.forgejo/workflows/: build.yml
.github/workflows/: build.yml
src/: cdextra.rs  cdtext.rs  cue.rs  drive.rs  error.rs  htoa.rs  main.rs  parallel.rs  progress.rs  ripper.rs  toc.rs
src/encoder/: flac.rs  mod.rs  mp3.rs  wav.rs
src/id/: brainz.rs  gnudb.rs  itunes.rs  mod.rs
src/tui/: app.rs  events.rs  job.rs  mod.rs  theme.rs  ui.rs
