[package]
name = "cdrip"
version = "0.1.2"
edition = "2024"
description = "A fast, accurate CD ripper in pure Rust - no GNU deps required!"
license = "MIT"
authors = ["Kazooki123"]
readme = "README.md"
keywords = ["cd", "audio", "ripper", "flac", "wav"]
categories = ["command-line-utilities", "multimedia::audio"]
repository = "https://codeberg.org/Kazooki123/cdrip.rs"

[[bin]]
name = "cdrip"
path = "src/main.rs"

[dependencies]
cd-da-reader = "0.3"
flac-codec = "1.3.2"
clap = { version = "4", features = ["derive", "color"] }
indicatif = { version = "0.17", features = ["rayon"] }
console = "0.15"
anyhow = "1"
thiserror = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

cdtoc = { version = "0.3", features = ["musicbrainz", "cddb"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
urlencoding = "2"

chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
